# ObjectInstanceDescriptors

./: .gitignore  Compute_Bounding_Box.py  Compute_SVC_ALL_Classes.py  Create_Val_folder.py  Data_preparation_gin.py  Detect_from_BB.py  Detect_noise_LIDAR.py  Learn_By_Class_with_features.py  Learn_By_class_Projections.py  Learn_by_class.py  Merge_3D_coordinates_and_features.py  Perform_TSNE_Features.py  Perform_clasifieur_IFC_LIDAR_Features.py  Perturbe_mesh.py  Projections.py  README.md  SVM_puis_prediction_avec_BB.py  Sample_ply_file.py  data_preparation_for_scannet.py  data_preparation_for_scannet_2.py  download.sh  export_data_to_nef.py  fbx_class_extractor.py  useful_elements.py
PLY_format_CaseStudy_fix_new_name/: fbx2ply-CaseStudy4_fix.ply  fbx2ply-CaseStudy5_fix.ply  fbx2ply-CaseStudy6_fix.ply
PLY_format_CaseStudy_fix_new_name/fbx-ply-export-Case_Study1_all/: 0762_x_2032mm_0762_x_2032mm_[147585].ply  0915_x_0610mm_0915_x_0610mm_[147637].ply  0915_x_0610mm_0915_x_0610mm_[147639].ply  0915_x_2134mm_0915_x_2134mm_[147584].ply  0915_x_2134mm_1701_0915_x_2134mm_1701_[147587].ply  0915_x_2134mm_1825_0915_x_2134mm_1825_[147590].ply  0915_x_2134mm_1825_0915_x_2134mm_1825_[147594].ply  0915_x_2134mm_1926_0915_x_2134mm_1926_[147589].ply  0915_x_2134mm_2504_0915_x_2134mm_2504_[147602].ply  0915_x_2134mm_2504_0915_x_2134mm_2504_[147642].ply  0915_x_2134mm_2504_3711_0915_x_2134mm_2504_3711_[147647].ply  0915_x_2134mm_2651_0915_x_2134mm_2651_[147643].ply  800x1000mm_800x1000mm_[147635].ply  800x1000mm_800x1000mm_[147636].ply  Compound_Ceilinga2Plain_2a2167917_Compound_Ceilinga2Plain__275d698.ply  Compound_Ceilinga2Plaina2165301_Compound_Ceilinga2Plaina216_3bf1bba.ply  Compound_Ceilinga2Plaina2167458_Compound_Ceilinga2Plaina216_2d946d5.ply  Mur_de_base_Basic_Walla2Basic_Walla211.5mm_wall_[147578].ply  Mur_de_base_Basic_Walla2Basic_Walla211.5mm_wall_[147579].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147565].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147567].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147568].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147569].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147570].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147580].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147581].ply  Mur_de_base_Basic_Walla2Basic_Walla222cm_wall_[147600].ply  Mur_de_base_Basic_Walla2Basic_Walla230mm_wall_[147544].ply  Mur_de_base_Basic_Walla2Basic_Walla230mm_wall_[147571].ply  Mur_de_base_Basic_Walla2Basic_Walla252cm_wall_[147573].ply  Mur_de_base_Basic_Walla2Basic_Walla252cm_wall_[147591].ply  Mur_de_base_Basic_Walla2Basic_Walla252cm_wall_[147608].ply  (+2 more)
PLY_formats_CaseStudy/: fbx2ply-CaseStudy1.ply  fbx2ply-CaseStudy2.ply  fbx2ply-CaseStudy3.ply  fbx2ply-CaseStudy4.ply  fbx2ply-CaseStudy5.ply  fbx2ply-CaseStudy6.ply
Ply_format_CaseStudy_fix/: fbx2ply-CaseStudy1_fix.ply  fbx2ply-CaseStudy2_fix.ply  fbx2ply-CaseStudy3_fix.ply
Qt App/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt Application/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: CMakeLists.txt
app/app/compute_dist_point_sets/: CMakeLists.txt
app/app/readLASExample/: CMakeLists.txt  main.cpp
app/presence/: CMakeLists.txt  console_color.h  main.cpp
ply_files/: AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda21_M_3ebe6b1.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda21_M_4326893.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda21_M_4cc358b.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda21_M_bd2b549.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_58b3b5b.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_7eb20f9.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_9fc454b.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_aaa997f.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_c29f498.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_df09c0b.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda22_M_e1da6c7.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda24_M_a0ec0a8.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Inwarda24_M_c8363cb.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outward_Am_39094df.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outward_Am_c84b522.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outwarda21__2a1c657.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outwarda21__33c17e0.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outwarda21__8572de3.ply  AM_Minima_SGL_WallEnd_ReturnEnd_Intermediate_Outwarda21__a597787.ply  ASH_Contour21_S6967_BIM_GBa2S6967AC - Contour 21 Close c_2b25fd1.ply  ASH_Contour21_S6967_BIM_GBa2S6967AC - Contour 21 Close c_377a22f.ply  ASH_Contour21_S6967_BIM_GBa2S6967AC - Contour 21 Close c_7a132b7.ply  ASH_Contour21_S6967_BIM_GBa2S6967AC - Contour 21 Close c_7f4be92.ply  ASH_Contour21_S6967_BIM_GBa2S6967AC - Contour 21 Close c_dbae11f.ply  Acoustic wall panela2Type 1a212359294 Acoustic wall panel_45fd0b5.ply  Acoustic wall panela2Type 1a212361347 Acoustic wall panel_63ffdfa.ply  Acoustic wall panela2Type 1a212370631 Acoustic wall panel_cc8376e.ply  Acoustic wall panela2Type 1a212370633 Acoustic wall panel_91dcaab.ply  Acoustic wall panela2Type 1a212378949 Acoustic wall panel_ab3104d.ply  Acoustic wall panela2Type 1a212378951 Acoustic wall panel_81da428.ply  Acoustic wall panela2Type 1a212419588 Acoustic wall panel_1f21b46.ply  Acoustic wall panela2Type 1a212419869 Acoustic wall panel_2dca4cb.ply  Acoustic wall panela2Type 1a212420001 Acoustic wall panel_f4002f7.ply  Acoustic wall panela2Type 1a212420119 Acoustic wall panel_d5f0d4b.ply  Acoustic wall panela2Type 1a212433624 Acoustic wall panel_c29c6b8.ply  Acoustic wall panela2Type 1a212433888 Acoustic wall panel_c9963e0.ply  Acoustic wall panela2Type 1a212434497 Acoustic wall panel_611a2c2.ply  Acoustic wall panela2Type 1a212435256 Acoustic wall panel_d802cf6.ply  Acoustic wall panela2Type 1a212528202 Acoustic wall panel_eb3bd8a.ply  Acoustic wall panela2Type 1a212528206 Acoustic wall panel_9cc0b55.ply  (+5067 more)
(+4772 files in other folders)
