### CMakeLists.txt ---
##

project(presence)

find_package(CGAL REQUIRED)

## #############################################################################
## Sources
## #############################################################################

set(${PROJECT_NAME}_SOURCES
  main.cpp)

## #############################################################################
##
## #############################################################################

add_executable(${PROJECT_NAME}
  ${${PROJECT_NAME}_SOURCES})


target_link_libraries(${PROJECT_NAME} CGAL )

######################################################################
### CMakeLists.txt ends here
